<?xml version="1.0"?>
<package format="2">
  <name>rqt_gui_aeropendulum</name>
  <version>0.0.0</version>
  <description>A Python GUI for control an Aeropendulum</description>

  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
